--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lilina — Emotionally intelligent DM assistant for high-ticket fertility coaching brands.</title>
+<title>Lilina — Emotionally intelligent Instagram DM assistant for high-ticket fertility coaching brands.</title>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400;1,500&family=Satisfy&family=Lato:wght@300;400&display=swap" rel="stylesheet">
 <style>
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
@@ -448,7 +448,7 @@ footer p { font-size: 0.7rem; color: rgba(245,238,227,0.18); letter-spacing: 0.1
 
   <span class="hero-eyebrow">Hello. I'm Lilina.</span>
   <h1>I hold your inbox<br>the way <em>you</em> would.</h1>
-  <p class="hero-body">I am an emotionally intelligent DM assistant for high-ticket fertility coaching brands. I sit inside your Instagram and hold the conversations you don't have hours for anymore. Not coldly. Not robotically. The way <em>you</em> would — if you weren't already running everything else.</p>
+  <p class="hero-body">I am an emotionally intelligent Instagram DM assistant for high-ticket fertility coaching brands. I sit inside your Instagram and hold the conversations you don't have hours for anymore. Not coldly. Not robotically. The way <em>you</em> would — if you weren't already running everything else.</p>
   <a href="#demo" class="btn">Come meet me · let's talk</a>
 </section>
 
@@ -643,7 +643,7 @@ footer p { font-size: 0.7rem; color: rgba(245,238,227,0.18); letter-spacing: 0.1
     <p class="cta-note reveal">Custom builds only · a few spots available</p>
     <div>
       <div class="footer-sig">Lilina</div>
-      <p>Emotionally intelligent DM assistant for high-ticket fertility coaching brands.</p>
+      <p>Emotionally intelligent Instagram DM assistant for high-ticket fertility coaching brands.</p>
     </div>
   </div>
 </section>
